Re-added image and text attachment handling

--- a/config-example.json
+++ b/config-example.json
@@ -47,7 +47,7 @@
 			"max_text": 100000,
 			"max_images": 5,
 			"max_messages": 75,
-			"use_plain_responses": false
+			"use_plain_responses": true
 		}
 	},
 	{
@@ -98,7 +98,7 @@
 			"max_text": 100000,
 			"max_images": 5,
 			"max_messages": 75,
-			"use_plain_responses": false
+			"use_plain_responses": true
 		}
 	}
 ]
